--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 					<h5>Your Ultimate Music Theory Guide</h5>
 				</div>
             </div>
-			<a href="">
-				<img id="app-store-badge" src="Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
+			<a id="app-store-badge" href="">
+				<img src="Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
 			</a>
 		</div>
 		<ul id="help-list">
